--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "gh-pages": "^3.1.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -39,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    
   }
 }
