Changed homepage URL

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/lingi524/bike-app-react/",
+  "homepage": "https://lingi524.github.io/bike-app-react/",
   "name": "bike-app-react",
   "version": "0.1.0",
   "private": true,
